fix: don't collapse label group when scrolling

--- a/src/components/Secrets/SecretsListView/SecretsListRow.scss
+++ b/src/components/Secrets/SecretsListView/SecretsListRow.scss
@@ -5,3 +5,11 @@
 .error-button {
   margin-left: var(--pf-v5-global--spacer--3xl);
 }
+
+.secret-label {
+  margin: var(--pf-v5-global--spacer--xs);
+}
+
+.secret-labels-toggle {
+  margin: 0;
+}
